<resources>
    <string name="app_name">Tijara</string>
    <string name="powered_eclectics">Powered by: Eclectics</string>
    <string name="logo">Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="create_account">Create Account</string>
    <string name="learn_more">Learn More</string>
    <string name="intro_screen_description">Intro_screen_description</string>
    <string name="save_grow">Save and Grow</string>
    <string name="quick_money">Quick Money Transfer</string>
    <string name="get_instant_loan">Get Instant Loan</string>
    <string name="you_can_now_start">You can now start saving and grow \nYourself at the same time</string>
    <string name="you_can_now_send">You can now send money faster \nAnd safely to your family and \nFriends</string>
    <string name="you_can_now_get_instant">You can now get instant loans\nFrom the Sacco at\nLow interest rate</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="please_enter_your_verification_code">We’ve sent you a verification code \nTo %1$s</string>
    <string name="we_have_sent_verification_code">We’ve sent you a verification code \nTo %1$s</string>
    <string name="get">Get %1$s</string>
    <string name="payl">Pay %1$s</string>
    <string name="kesh">KES %1$s</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="last_logged">Last logged %1$s</string>
    <string name="we_sent_yoi_your">We sent you your default pin to %1$s</string>
    <string name="username_email">Username/Email</string>
    <string name="pin">Pin</string>
    <string name="continu">Continue</string>
    <string name="reason_for_cancel">Kindly give us a reason for canceling the transfer!</string>
    <string name="reason_for_reject">Kindly give us a reason for rejecting the transfer!</string>
    <string name="reason_for_accept">Kindly give us a reason for accepting the transfer!</string>
    <string name="reason_for_accept_loan">Kindly give us a reason for accepting the loan request!</string>
    <string name="reason_for_reject_loan">Kindly give us a reason for rejecting the loan request!</string>
    <string name="forgot_password">Forgot Pin?</string>
    <string name="reset_password">Reset Password</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="personal_details">Personal Details</string>
    <string name="personal_information">PERSONAL Details</string>
    <string name="residense_information">Residence Details</string>
    <string name="email_address">Email Address</string>
    <string name="valid_id_number">Valid ID Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="have_an_active_account">Have an active account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="bank_details">Bank Details</string>
    <string name="select_bank">Select Bank</string>
    <string name="select_branch">Select Branch</string>
    <string name="account_number">Account number</string>
    <string name="account_name">Enter account name</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="next_of_kin_details">NEXT OF KIN DETAILS</string>
    <string name="full_names">Full names</string>
    <string name="phone_number">Phone number</string>
    <string name="work_details">Work Details</string>
    <string name="employee_number">Employee Number</string>
    <string name="department">Department</string>
    <string name="basic_salary">Basic Salary</string>
    <string name="upload_pay_slip">Upload pay slip</string>
    <string name="dashboard">Dashboard</string>
    <string name="loans">Loans</string>
    <string name="services">Services</string>
    <string name="accounts">Account</string>
    <string name="statements">Statements</string>
    <string name="loan_statements">Loan Statements</string>
    <string name="fosa">FOSA</string>
    <string name="saving">Savings</string>
    <string name="loans_status">Loan Status </string>
    <string name="current_bal">Current Balance</string>
    <string name="avail_bal">Available Balance</string>
    <string name="saving_bal">Saving Balance</string>
    <string name="target_amount">Target Amount</string>
    <string name="maturity_date">Maturity Date</string>
    <string name="amount">Amount</string>
    <string name="amoun">Amount:</string>
    <string name="type">TYPE</string>
    <string name="outstanding_bal">Outstanding Balance</string>
    <string name="interest_rate">Interest rate</string>
    <string name="back">Back</string>
    <string name="title_home">Home</string>
    <string name="service">Services</string>
    <string name="search_for_services">Search services</string>
    <string name="search_for_contact">Search for contact</string>
    <string name="search_for_a_bill">Search for a bill</string>
    <string name="payments">Payments</string>
    <string name="loan_repayment">Loan Repayment</string>
    <string name="pesa_link">PesaLink</string>
    <string name="pesa_link_transaction_sucess">PesaLink transaction successful</string>
    <string name="airtime_purchase_sucess">Airtime purchase successful</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="transfer_find">Transfer Funds</string>
    <string name="transfer_shares">Transfer Shares</string>
    <string name="transfer_mobile_m">Mobile \nMoney Transfer</string>
    <string name="transfer_bank">Bank Transfer</string>
    <string name="transfer_internal">Internal Transfer</string>
    <string name="transfer_pesalink">Pesalink Transfer</string>
    <string name="transfer_electronic">Electronic Fund \nTransfer</string>
    <string name="my_shares">My Shares</string>
    <string name="acceppt_transfer">Accept Transfer</string>
    <string name="create_new_account">Create New Account</string>
    <string name="how_much_would_you_like_to_deposit">How much would you like to deposit?</string>
    <string name="how_much_would_you_like_to_pay_your_loan">How much would you like to pay?</string>
    <string name="how_much_would_you_like_to_withdraw">How much would you like to withdraw?</string>
    <string name="how_much_share_would_you_like_to_buy">How much share would you like to buy?</string>
    <string name="make_deposit">Make Deposit</string>
    <string name="other_services">Others</string>
    <string name="an_stk_push_will_be_sent_on_your_phone_to_enter_mpesa_pin_to_authorise_transaction">An stk push will be sent on your phone to enter Mpesa PIN to \nauthorise transaction</string>
    <string name="your_request_has_been_received">Your request has been received and your transaction \nis being processed</string>
    <string name="are_you_sure_you_want_to_pay_loan">Are you sure you want to pay \nLoan?</string>
    <string name="how_much_would_you_like_to_get_as_loan">How much would you like to get \nAs loan?</string>
    <string name="Get">Get a loan</string>
    <string name="how_much_fund_would_you_like_to_transfer">How much would you like to transfer?</string>
    <string name="how_much_would_you_like_to_sell">How much would you like to sell?</string>
    <string name="how_much_would_you_like_to_send">How much would you like to send?</string>
    <string name="how_much_airtime_would_you_like_to_buy">How much airtime would you like to buy?</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="mobile_money_transfer">Mobile Money Transfer</string>
    <string name="mobile_money_transfer_sucess">Mobile Money Transfer Successful</string>
    <string name="self_transfer_transaction_sucess">Self Transfer Transaction Successful</string>
    <string name="other_transfer_transaction_sucess">Member Transfer Transaction Successful</string>
    <string name="pesalink_to_phone">PesaLink to Phone</string>
    <string name="pesalink_to_account">PesaLink to Account</string>
    <string name="are_you_sure_you_want_to_buy_shares">Are you sure you want to buy \nShares?</string>
    <string name="buy_share">Buy Shares</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="welcome_to_tijara_let_check">Welcome to Tijara. Let’s check whether you have a registered account</string>
    <string name="please_confirm_your_country_code">Please confirm your country code and phone number before you proceed</string>
    <string name="select_preferred_language">Select preferred language</string>
    <string name="select_your_country">Select your country</string>
    <string name="select_any_sacco_you_want_to_join_now">Select any SACCO you want \nto join now</string>
    <string name="select_any_sacco_you_want">Select any SACCO you want </string>
    <string name="stima_sacco">Stima Sacco</string>
    <string name="kenya_police_sacco">Kenya Police Sacco</string>
    <string name="ardhi_sacco">Ardhi Sacco</string>
    <string name="nation_sacco">Nation Sacco</string>
    <string name="harambee_sacco">Harambee Sacco</string>
    <string name="you_can_select_a_maximum_of_3_saccos">You can select a maximum of 3 Saccos</string>
    <string name="register">REGISTER NOW</string>
    <string name="root_message">This Device can not run on Rooted devices , unroot your device and try again</string>
    <string name="emulator_message">This application does not work on virtual devices or simulators. You need an actual device to run it!</string>
    <string name="ok">OK</string>
    <string name="invalid_passwordorusername">Invalid Password or Username</string>
    <string name="four_hundred_error">Unable to complete your request. Please try again later...!</string>
    <string name="error_occurred">Error occurred,  try again later.</string>
    <string name="no_network_connection">No internet connection, Kindly turn on Data or WIFI and try again</string>
    <string name="need_help_with_your_password">Need help with your \nPassword?</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="otp_number">OTP Number</string>
    <string name="old_pin">Old Pin</string>
    <string name="kes">KES</string>
    <string name="activate">Activate</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="there_are_no_organization_linked_to_your_number_click_continue_to_create_an_account">There are No organization linked to your number. \nClick continue to create an account</string>
    <string name="select_one_sacco_to_login">Here are your Sacco’s! Select one to proceed \nTo your account</string>
    <string name="kindly_select_a_sacco_of">Kindly select a Sacco of your choice to be \nRegistered into</string>
    <string name="national_id_front">National ID (Front) </string>
    <string name="click_to_take_photo">Click to take photo</string>
    <string name="cancel">Cancel</string>
    <string name="last_saving_date">Last Saving Date</string>
    <string name="opening_balance">Opening Balance</string>
    <string name="ref">REFNO:</string>
    <string name="transaction_date">Transaction Date:</string>
    <string name="debit_amount">Debit Amount</string>
    <string name="credit_amount">Credit Amount</string>
    <string name="buy_from">Buy from</string>
    <string name="charges">CHARGES:</string>
    <string name="buy_for">BUY FOR</string>
    <string name="confirm_buyairtime">Confirm Buy Airtime</string>
    <string name="sorry_you_don_t_have_an_account_registered">Sorry you don’t have an account \nregistered!</string>
    <string name="your_number_registered">Your number is not registered with Tijara please \nProceed to do a self registration process to join</string>
    <string name="not_now">Not Now</string>
</resources>