<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/progress_bg"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="@dimen/_20dp"
            android:layout_height="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/_15dp"
            android:layout_marginTop="@dimen/_20dp"
            android:src="@drawable/cancel"/>
        <TextView
            android:id="@+id/tvOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@+id/ivCancel"
            android:text="@string/sorry_you_don_t_have_an_account_registered"/>
        <TextView
            android:id="@+id/tvReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:gravity="center"
            android:textSize="@dimen/_13sp"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvOne"
            android:text="@string/your_number_registered"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnREGISTER"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45dp"
            android:theme="@style/ButtonTheme"
            android:background="@drawable/btn_normal_bg"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textSize="@dimen/_14sp"
            android:layout_marginTop="@dimen/_50dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/_15dp"
            android:layout_marginStart="@dimen/_15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReg"
            app:layout_constraintBottom_toTopOf="@+id/btnNotNow"
            android:layout_marginBottom="@dimen/_20dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNotNow"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45dp"
            android:theme="@style/ButtonTheme"
            android:background="@drawable/btn_less_radius"
            android:text="@string/not_now"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="@dimen/_14sp"
            android:layout_marginTop="@dimen/_50dp"
            android:textColor="@color/textColor"
            android:layout_marginEnd="@dimen/_15dp"
            android:layout_marginStart="@dimen/_15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>