<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30dp"
        android:paddingBottom="@dimen/_30dp"
        tools:context=".ui.homepage.home.dashboard.MakeDepositFragment">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="@dimen/_12dp"
        android:background="@color/textColor"/>

        <androidx.appcompat.widget.Toolbar
            android:background="@color/textColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/topView"
            android:id="@+id/main_toolbar">
        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_buyairtime"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/_14sp"
            android:layout_marginStart="@dimen/_15dp"/>
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/main_toolbar"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginTop="@dimen/_20dp"
            android:textSize="@dimen/_13sp"
            android:textColor="@color/hintColor"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/buy_from"
            android:textAllCaps="true"
           />
        <TextView
            android:id="@+id/tv_NameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_Name"
            android:layout_marginEnd="@dimen/_15dp"
            android:textSize="@dimen/_13sp"
            android:textColor="@color/hintColor"
           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_Name"
            tools:text="FOSA"
            />
        <TextView
            android:id="@+id/tv_Bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_Name"
          android:layout_marginTop="@dimen/_2dp"
            android:textSize="@dimen/_13sp"
            android:textAllCaps="true"
            android:textColor="@color/hintColor"
            app:layout_constraintStart_toStartOf="@id/tv_Name"
            android:text="@string/buy_for"
            />
        <TextView
            android:id="@+id/tv_BankValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_Bank"
            app:layout_constraintBottom_toBottomOf="@+id/tv_Bank"
            android:layout_marginTop="@dimen/_2dp"
            android:textSize="@dimen/_13sp"
            android:textColor="@color/hintColor"
            app:layout_constraintEnd_toEndOf="@id/tv_NameValue"
            tools:text="STANBIC"
            />
        <TextView
            android:id="@+id/tv_ACNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_Bank"
          android:layout_marginTop="@dimen/_2dp"
            android:textSize="@dimen/_13sp"
            android:textColor="@color/hintColor"
            app:layout_constraintStart_toStartOf="@id/tv_Name"
            android:text="@string/amoun"
            android:textAllCaps="true"
            />
        <TextView
            android:id="@+id/tv_ACNOValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_ACNO"
            app:layout_constraintBottom_toBottomOf="@+id/tv_ACNO"
            android:layout_marginTop="@dimen/_2dp"
            android:textSize="@dimen/_13sp"
            android:textColor="@color/hintColor"
            app:layout_constraintEnd_toEndOf="@id/tv_NameValue"
            tools:text="12345678"
            />
        <TextView
            android:id="@+id/tv_Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_ACNO"
          android:layout_marginTop="@dimen/_2dp"
            android:textSize="@dimen/_13sp"
            android:textColor="@color/hintColor"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="@id/tv_ACNO"
            android:text="@string/charges"
            />
        <TextView
            android:id="@+id/tv_AmountValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_Amount"
            app:layout_constraintBottom_toBottomOf="@+id/tv_Amount"
            android:layout_marginTop="@dimen/_2dp"
            android:textSize="@dimen/_13sp"
            android:textColor="@color/hintColor"
            app:layout_constraintEnd_toEndOf="@id/tv_NameValue"
            tools:text="1200"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_Amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_15dp"
            android:layout_marginTop="@dimen/_20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40dp"
                android:background="@drawable/btn_less_radius"
                android:text="@string/cancel"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sp"
                android:textStyle="bold"
                android:theme="@style/ButtonTheme"
                android:layout_marginEnd="@dimen/_3dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_Submit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Submit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/btn_normal_bg"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sp"
                android:textStyle="bold"
                android:theme="@style/ButtonTheme"
                android:layout_marginStart="@dimen/_3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>